# tempren

./: .coveragerc  .envrc  .gitignore  .pre-commit-config.yaml  .travis.yml  AppImageBuilder.yml  CLAUDE.md  CONTRIBUTING.md  MANUAL.md  QUICKSTART.md  README.md  generate-class-diagrams.sh  mypy.ini  pyproject.toml  release-finish.sh  release-start.sh  release.sh  snapcraft.yaml  wait_for_pypi.sh
.github/workflows/: make-a-release.yml  publish-on-pypi.yml  publish-on-snapcraft.yml  publish-release.yml  run-tests.yml
.serena/: project.yml
.serena/memories/: project_overview.md  style_and_conventions.md  suggested_commands.md  task_completion_checklist.md
snap/: snapcraft.yaml
tempren/: adhoc.py  alias.py  cli.py  discovery.py  evaluation.py  exceptions.py  factories.py  file_filters.py  file_sorters.py  filesystem.py  main.py  path_generator.py  pipeline.py  primitives.py  registry.py
tempren/plugins/tags/: core.py  text.py
tempren/tags/: audio.py  core.py  filesystem.py  geo.py  gpx.py  hash.py  image.py  text.py  video.py
tempren/template/: Parser.py  RawText.py  TagAstBuilder.py  TagExpression.g4  TagExpression.interp  TagExpression.py  TagExpression.tokens  TagExpressionElement.py  TagExpressionLexer.interp  TagExpressionLexer.py  TagExpressionListener.py  TagExpressionParser.py  TagInvocation.py  TagTreeBuilder.py  ast.py  compiler.py  exceptions.py  generate_parser.sh  generators.py  grammar.lark  name_generators.py  parser.py  path_generators.py  registry.py  tags.py  tree_builder.py  tree_elements.py
tempren/template/grammar/: TagTemplateLexer.g4  TagTemplateLexer.interp  TagTemplateLexer.py  TagTemplateLexer.tokens  TagTemplateParser.g4  TagTemplateParser.interp  TagTemplateParser.py  TagTemplateParser.tokens  TagTemplateParserListener.py  TagTemplateParserVisitor.py  generate.sh  generate_for_grun.sh
tempren/template/parser/: lexer.py
tests/: conftest.py  test_adhoc.py  test_alias.py  test_cli.py  test_file_filters.py  test_file_sorters.py  test_filesystem.py  test_path_generator.py  test_path_generators.py  test_pipeline.py  test_primitives.py  test_tag_ast_builder.py  test_tag_tree_builder.py  test_template_parser.py  test_tempren.py
tests/e2e/: conftest.py  test_adhoc_tags.py  test_aliases.py  test_conflict_resolution.py  test_filtering.py  test_operation_modes.py  test_sorting.py  test_various_flags.py
tests/plugins/input/test_data/: markdown.md
tests/plugins/tags/: test_core.py  test_hash.py  test_text.py
tests/tags/: test_audio.py  test_core.py  test_filesystem.py  test_gpx.py  test_hash.py  test_image.py  test_text.py  test_video.py
tests/template/: mocks.py  test_ast.py  test_compiler.py  test_discovery.py  test_generators.py  test_parser.py  test_path_generators.py  test_registry.py  test_tag_factory.py  test_tag_registry.py  test_tree_binding.py  test_tree_builder.py  test_tree_elements.py
tests/template/parser/: test_lexer.py
tests/template/test_module/: first_level.py  unsupported_module.py
tests/template/test_module/submodule/: second_level.py
tests/test_data/: markdown.md
tests/test_data/audio/: sample.flac
tests/test_data/gpx/: empty.gpx  walk.gpx
tests/test_data/nested/second/third/: level-3.file
tests/test_data/tags/: my_script.sh  packageless_tags.py  replace.sh
tests/test_data/video/: timelapse.mkv
