[tool.poetry]
name = "tempren"
version = "0.10.2"
description = "Template-based renaming utility"
readme = "README.md"
license = "GPL-3.0-or-later"
authors = ["Paweł Żukowski <p.z.idlecode@gmail.com>"]
homepage = "https://github.com/idle-code/tempren"
keywords = ["batch-renaming", "cli", "filename"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "Intended Audience :: System Administrators",
    "Natural Language :: English",
    "Operating System :: POSIX",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Unix",
    "Programming Language :: Python :: 3",
    "Topic :: System :: Filesystems",
    "Topic :: Utilities"
]

[tool.poetry.dependencies]
python = "^3.8"
antlr4-python3-runtime = "4.13.0"
Unidecode = "^1.3.6"
pathvalidate = "^3.1.0"
mutagen = "^1.46.0"
docstring-parser = "^0.15"
python-magic = "^0.4.27"
Pillow = "^10.0.0"
piexif = "^1.1.3"
pymediainfo = {version = "^6.0.1", optional = true}
isodate = "^0.6.1"
gpxpy = "^1.5.0"
Pint = "^0.21.0"

[tool.poetry.dev-dependencies]
pytest = "^7.4.0"
pytest-cov = "^4.1"
coverage = "^7.2.7"
pre-commit = "^3.3.3"
mypy = "^1.4.1"
pylint = "^2.17.5"

[tool.poetry.extras]
video = ["pymediainfo"]

[tool.poetry.scripts]
tempren = "tempren.cli:throwing_main"

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 88

[tool.pytest.ini_options]
addopts = "--cov-report=xml --cov-report=term-missing --cov=tempren"
testpaths = ["tests"]
markers = [
    "e2e: slower, end-to-end tests often running tempren as separate process",
    "slow: slower test that often use timeouts"
]

[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.masonry.api"
